log
Sat 11 May 2024 09:11:52 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
5c80269
Sat 11 May 2024 09:15:21 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
45cc308
Sat 11 May 2024 09:19:23 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:5: error: expected expression before ‘}’ token
   81 |     }
      |     ^
Compilation failed
67f89bb
Sat 11 May 2024 09:22:42 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
1417a6c
